--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,19 @@
-@import "tailwindcss";
-@plugin "daisyui";
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+  @import "tailwindcss";
+  @plugin "daisyui";
+  @plugin "daisyui" {
+      themes: light --default, dark --prefersdark;
+  }
+@plugin "daisyui/theme" {
+    name: "light";
+    default: true;
+    --color-primary: #CAEB66;
+    --color-secondary: #03373D;
+}
+
+body {
+    margin: 0;
+    font-family: "Urbanist", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
